--- a/Codigo/css/navbar.css
+++ b/Codigo/css/navbar.css
@@ -21,7 +21,7 @@ header {
     height: 66px;
     width: 100%;
     gap: 40px;
-    background-color: #0A0040;
+    background-color: #004976;
     color: white;
 }
 
@@ -42,7 +42,7 @@ header {
 .op a{
     text-decoration: none;
     outline: none;
-    color: #f8f9fa;
+    color: #47d7ac;
     font-size: 15px ;
 }
 
