--- a/Codigo/css/navbar.css
+++ b/Codigo/css/navbar.css
@@ -21,7 +21,7 @@ header {
     height: 66px;
     width: 100%;
     gap: 40px;
-    background-color: #004976;
+    background-color: #0C111B;
     color: white;
 }
 
