--- a/Codigo/css/header.css
+++ b/Codigo/css/header.css
@@ -1,7 +1,7 @@
+
+
 * {
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
 }
 
 body {
@@ -18,7 +18,7 @@ header {
     /*justify-content: space-between;*/
     align-items: center;
     justify-content: center;
-    height: 66px;
+    height: 70px;
     width: 100%;
     gap: 40px;
     background-color: #0C111B;
@@ -49,15 +49,79 @@ header {
 .op:hover{
     background: #47d7ac;
 }
-.topic{
+.off-screen-menu{
+background-color: #29303E;
+height: 100vh;
+width: 100%;
+max-width: 450px;
+position: fixed;
+top: 0;
+right: -450px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items:center;
+text-align: center;
+font-size: 12px;
+transition: .3s ease;
+}
+.off-screen-items{
+    position: relative;
+    top: 25px;
     display: flex;
     
-    align-items: center;
-    justify-content: center;
-    height: 33px;
-    width: 180px;
 }
-.topic_img{
-    width: 33px;
+.off-screen-menu.active{
+    right: 0;
+}
+
+nav {
+    background-color: #0C111B;
+    padding: 0%;
+    display: flex;
+}
+ 
+.ham-menu{
     height: 33px;
+    width: 33px;
+    margin-left: auto;
+    position: relative;
+}
+.ham-menu span{
+    height: 3px;
+    width: 40px;
+    background-color: #ffff;
+    border-radius: 25px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: .3s ease;
+}
+
+.ham-menu span:nth-child(1){
+    top:25%;
+}
+.ham-menu span:nth-child(2){
+    top: 50%;
+}
+
+.ham-menu span:nth-child(3){
+    top: 75%;
+}
+
+.ham-menu.active span:nth-child(1){
+    top: 50%;
+    transform: translate(-50%, -50%)rotate(45deg);
+    width: 100%;
+}
+
+.ham-menu.active span:nth-child(2){
+    opacity: 0;
+}
+
+.ham-menu.active span:nth-child(3){
+    top: 50%;
+    transform: translate(-50%, 50%)rotate(-45deg);
+    width: 100%;
 }
