--- a/Codigo/css/header.css
+++ b/Codigo/css/header.css
@@ -51,7 +51,7 @@ header {
 }
 .off-screen-menu{
 background-color: #29303E;
-height: 100vh;
+height: 60vh;
 width: 100%;
 max-width: 450px;
 position: fixed;
@@ -64,13 +64,17 @@ align-items:center;
 text-align: center;
 font-size: 12px;
 transition: .3s ease;
+border-bottom-left-radius:4px ;
+border-bottom-right-radius:4px ;
 }
-.off-screen-items{
-    position: relative;
-    top: 25px;
-    display: flex;
-    
+
+.menu-list {
+        display: flex;
+        flex-direction: column;
+        gap: 10px; /* Ajuste o valor para o espaçamento desejado */
+        padding: 10px; /* Opcional: espaçamento interno */
 }
+
 .off-screen-menu.active{
     right: 0;
 }
@@ -82,32 +86,18 @@ nav {
 }
  
 .ham-menu{
-    height: 33px;
-    width: 33px;
+    height: 40px;
+    width: 40px;
     margin-left: auto;
     position: relative;
+    top: 0;
 }
 .ham-menu span{
-    height: 3px;
-    width: 40px;
+    height: 1px;
+    width: 100%;
     background-color: #ffff;
     border-radius: 25px;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: .3s ease;
-}
-
-.ham-menu span:nth-child(1){
-    top:25%;
-}
-.ham-menu span:nth-child(2){
-    top: 50%;
-}
-
-.ham-menu span:nth-child(3){
-    top: 75%;
 }
 
 .ham-menu.active span:nth-child(1){
@@ -124,4 +114,46 @@ nav {
     top: 50%;
     transform: translate(-50%, 50%)rotate(-45deg);
     width: 100%;
+}.ham-menu {
+    height: 33px;
+    width: 33px;
+    margin-left: auto;
+    position: relative;
+}
+
+.ham-menu span {
+    height: 3px;
+    width: 40px;
+    background-color: #ffff;
+    border-radius: 25px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: .3s ease;
+}
+
+.ham-menu span:nth-child(1) {
+    top: 25%;
+}
+
+.ham-menu span:nth-child(2) {
+    top: 50%;
+}
+
+.ham-menu span:nth-child(3) {
+    top: 75%;
+}
+
+.ham-menu.active span:nth-child(1) {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.ham-menu.active span:nth-child(2) {
+    opacity: 0;
+}
+
+.ham-menu.active span:nth-child(3) {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
 }
