--- a/Codigo/css/header1.css
+++ b/Codigo/css/header1.css
@@ -50,39 +50,28 @@ header {
     background: #47d7ac;
 }
 .off-screen-menu{
-background-color: #29303E;
-height: 60vh;
-width: 100%;
-max-width: 450px;
-position: fixed;
-top: 0;
-right: -450px;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items:center;
-text-align: center;
-font-size: 12px;
-transition: .3s ease;
-border-bottom-left-radius:4px ;
-border-bottom-right-radius:4px ;
-}
-
-.menu-list {
+        background-color: #29303E;
+        height: 60vh;
+        width: 100%;
+        max-width: 450px;
+        position: fixed;
+        top: 0;
+        right: -450px;
         display: flex;
         flex-direction: column;
-        gap: 10px; /* Ajuste o valor para o espaçamento desejado */
-        padding: 10px; /* Opcional: espaçamento interno */
+        justify-content: center;
+        align-items:center;
+        text-align: center;
+        font-size: 12px;
+        transition: .3s ease;
+        border-bottom-left-radius:4px ;
+        border-bottom-right-radius:4px ;
 }
+
+
 
 .off-screen-menu.active{
     right: 0;
-}
-
-nav {
-    background-color: #0C111B;
-    padding: 0%;
-    display: flex;
 }
  
 .ham-menu{
@@ -91,45 +80,17 @@ nav {
     margin-left: auto;
     position: relative;
     top: 0;
+    cursor: pointer;
+    transition: 0.3s ease;
 }
+
 .ham-menu span{
-    height: 1px;
-    width: 100%;
-    background-color: #ffff;
-    border-radius: 25px;
-    position: absolute;
-}
-
-.ham-menu.active span:nth-child(1){
-    top: 50%;
-    transform: translate(-50%, -50%)rotate(45deg);
-    width: 100%;
-}
-
-.ham-menu.active span:nth-child(2){
-    opacity: 0;
-}
-
-.ham-menu.active span:nth-child(3){
-    top: 50%;
-    transform: translate(-50%, 50%)rotate(-45deg);
-    width: 100%;
-}.ham-menu {
-    height: 33px;
-    width: 33px;
-    margin-left: auto;
-    position: relative;
-}
-
-.ham-menu span {
     height: 3px;
-    width: 40px;
+    width: 100%;
     background-color: #ffff;
     border-radius: 25px;
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: .3s ease;
+    transition: 0.3s ease;
 }
 
 .ham-menu span:nth-child(1) {
@@ -156,4 +117,8 @@ nav {
 .ham-menu.active span:nth-child(3) {
     top: 50%;
     transform: translate(-50%, -50%) rotate(-45deg);
+}
+.ham-menu.active {
+    transition: 0.3s ease;
+    transform: translateX(175px); /* Move o "X" para a direita */
 }
