--- a/Codigo/css/header1.css
+++ b/Codigo/css/header1.css
@@ -15,7 +15,6 @@ header {
 .navbar {
     
     display: flex;
-    /*justify-content: space-between;*/
     align-items: center;
     justify-content: center;
     height: 70px;
@@ -62,7 +61,7 @@ header {
         justify-content: center;
         align-items:center;
         text-align: center;
-        font-size: 12px;
+        font-size: 20px;
         transition: .3s ease;
         border-bottom-left-radius:4px ;
         border-bottom-right-radius:4px ;
@@ -121,4 +120,28 @@ header {
 .ham-menu.active {
     transition: 0.3s ease;
     transform: translateX(175px); /* Move o "X" para a direita */
+    left: 0;
+}
+
+.menu-list {
+    margin: 0;
+    height: 75%;
+    width: 100%;
+    display: flex;
+    flex-direction: column; /* Para empilhar os itens verticalmente */
+    align-items: center;
+    justify-content: center;
+}
+.uop {
+    background: #FF577C;
+    color: #ffff;
+    height: 22px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.uop:hover{
+    background: #ffff;
+    color: #0C111B;
 }
