--- a/Codigo/css/footer.css
+++ b/Codigo/css/footer.css
@@ -66,8 +66,6 @@
 }
 .content-2{
   width: 15%;
-  margin-left: 5px, #ffff;
-  margin-right: 5px, #ffff;
   text-align: center;
 }
 .content-3{
@@ -80,6 +78,27 @@
   transition: 0.3s ease;
 }
 .content-3 p:nth-child(4):hover{
+  text-decoration: underline;
+}
+.content-3 p:nth-child(3){
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+.content-3 p:nth-child(3):hover{
+  text-decoration: underline;
+}
+.content-3 p:nth-child(2){
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+.content-3 p:nth-child(2):hover{
+  text-decoration: underline;
+}
+.content-3 p:nth-child(1){
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+.content-3 p:nth-child(1):hover{
   text-decoration: underline;
 }
 .circles-bg{
