--- a/Codigo/css/footer.css
+++ b/Codigo/css/footer.css
@@ -21,8 +21,8 @@
   bottom: 0%;
 }
 .footer-container{
-  font-size: 24px;
-  height: 80px;
+  font-size: 18px;
+  height: 120px;
   background: #004976;
   color: #fff;
   display: flex;
@@ -47,9 +47,13 @@
   background: #004976;
 }
 #footer-block ul{
+  display: flex;
   text-decoration: underline;
   font-weight: bold;
+  font-size: 14px;
   padding: 0;
+  margin-left: 100px;
+  gap: 120px;
 }
 #footer-block li:nth-child(2){
   cursor:  pointer;
@@ -58,55 +62,57 @@
   cursor: pointer;
 }
 #footer-block li{
-  margin-right: 100px;
+ 
   display: inline;
 }
 #footer-block span{
   background: #ffff;
   height: 2px;
-  width: 900px;
+  width: 100%;
   border-radius: 25px;
   display: block;
 }
 .under-container{
-
   width: 100%;
   background: #003556;
   color: #fff;
-  height: 200px;
-  justify-content:space-around;
+  height: 150px;
+  justify-content:space-between;
   display: flex;
   align-items: center;
   flex-direction: row;
 
 }
 .content-1{
-
+  font-size: 12px;
   flex-direction: column;
   justify-content: center;
   display: flex;
   height: 100%;
-  width:fit-content;
-  min-width:204px ;
+  width:25%;
+  min-width:210px ;
   text-align: center;
 }
 .content-2{
-
+  border-right: solid #fff;
+  border-left: solid #fff;
+  font-size: 12px;
   justify-content: center;
   flex-direction: column;
   display: flex;
   height: 100%;
-  width: 20%;
+  width: 25%;
   text-align: center;
 }
 .content-3{
-  
+  font-size: 12px;
   flex-direction: column;
   display: flex;
   justify-content: center;
   height: 100%;
-  width: 20%;
+  width: 25%;
   text-align: center;
+
 }
 .content-3 p:nth-child(4){
   color: #FF577C;
@@ -140,7 +146,7 @@
 .circle-bg{
   max-height: 200px;
   display: flex;
-  width: 25%;
+  width: 18%;
   height: 100%;
   position: relative;
 }
