--- a/Codigo/css/footer.css
+++ b/Codigo/css/footer.css
@@ -7,9 +7,10 @@
 
 .footer{
     bottom: 0;
-    position: fixed;
+    position: relative;
     left: 0;
     right: 0;
+    margin-top: 180px;
     /* Altura do footer */
     background-color: #333;
     color: white;
@@ -150,10 +151,12 @@
   height: 100%;
   position: relative;
 }
-.circle-black {
+/*.circle-black {
   position: absolute;
+  
   width: 500px;
   height: 500px;
+  
   background-color: black;
   border-radius: 50%;
   z-index: 2;
@@ -163,8 +166,10 @@
 
 .circle-green {
   position: absolute;
+  
   width: 450px;
   height: 450px;
+  
   background-color: #47D7AC; 
   border-radius: 50%;
   z-index: 1;
@@ -172,3 +177,4 @@
   
   bottom: -50px;
 }
+  */  
