--- a/Codigo/css/footer.css
+++ b/Codigo/css/footer.css
@@ -22,7 +22,9 @@
   bottom: 0%;
 }
 .footer-container{
-  margin-left: 80px;
+  overflow: hidden;
+  width: 100%;
+  /*margin-left: 80px;*/
   font-size: 18px;
   height: 120px;
   background: #004976;
@@ -33,13 +35,15 @@
   flex-direction: row;
 }
 #square{
-  background: #003556;
-  height: 80px;
-  width: 80px;
+  height: 0px;
+  width: 0px;
   position: absolute;
+  border-left: 60px solid transparent;
+  border-right: 60px solid transparent;
+  border-bottom: 70px solid #003556;
   top:  ;
-  right: -40px;
-  transform: rotate(45deg);
+  right: -25px;
+  transform: rotate(-90deg);
 }
 #footer-block{
   width: 100%;
