--- a/Codigo/css/footer.css
+++ b/Codigo/css/footer.css
@@ -23,7 +23,6 @@
 }
 .footer-container{
   width: 100%;
-  margin-left: 80px;
   font-size: 18px;
   height: 120px;
   background: #004976;
@@ -32,6 +31,9 @@
   align-items: center;
   justify-content: center;
   flex-direction: row;
+}
+.footer-container h1{
+  margin-left: 80px;
 }
 #square{
   height: 0px;
