--- a/Codigo/css/termos.css
+++ b/Codigo/css/termos.css
@@ -6,6 +6,9 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center; /* Centraliza os cabeçalhos */
 }
 
-footer {
-    text-align: center; /* Centraliza o texto do rodapé */
+.content{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    
 }
