--- a/Codigo/css/novo_cadastro.css
+++ b/Codigo/css/novo_cadastro.css
@@ -28,7 +28,7 @@
     display: flex;
     flex-direction: column;
     width: 530px;
-    height: 477px;
+    height: 667px;
     padding: 20px;
     background-color: #004976;
     border-radius: 10px;
@@ -54,6 +54,14 @@
     padding: 5px;
     background-color: #004976;
     color: white;
+    font-size: large;
+}
+
+.novoc-div select{
+    background-color: #004976;
+    color: white;
+    border: 0;
+    border-bottom: 1px solid white;
     font-size: large;
 }
 
