--- a/Codigo/css/header1.css
+++ b/Codigo/css/header1.css
@@ -46,7 +46,7 @@ header {
 }
 
 .op:hover{
-    background: #47d7ac;
+    background: #D1C4E9;
 }
 .off-screen-menu{
         background-color: #29303E;
