--- a/Codigo/css/termos.css
+++ b/Codigo/css/termos.css
@@ -1,4 +1,4 @@
-body {
+.body {
     text-align: center; /* Centraliza todo o texto do corpo */
 }
 
@@ -8,7 +8,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .content{
     align-items: center;
-    display: flex;
-    justify-content: center;
     
+}
+p {
+    text-align: center;
 }
