--- a/Codigo/css/home.css
+++ b/Codigo/css/home.css
@@ -1,51 +1,37 @@
-.home-head{
-    margin-left: 20px;
-    width: fit-content;
-    padding: 10px;
-    border: 2px solid black;
-    display: inline-block;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f9f9f9;
+    margin: 0;
+    padding: 0;
 }
 
-#home-head{
-    text-decoration: none;
-    color: black;
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
 }
 
-.home-head:hover{
-    transition: 0.2s;
-    cursor: pointer;
-    background-color: #000000;
-}
-
-#home-head:hover{
-    color: white;
-}
-
-
-.main-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 18px;
-    text-align: left;
-    text-align: center;
-}
-.main-table th,
-.main-table td {
-    padding: 12px;
-    border-bottom: 1px solid #ddd;
-}
-.main-table th {
-    background-color: #f4f4f4;
+h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
     color: #333;
 }
-.main-table tr:hover {
-    background-color: #f1f1f1;
+
+hr {
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
 }
-.main-table a {
-    color: #1a73e8;
-    text-decoration: none;
+
+p {
+    font-size: 16px;
+    line-height: 1.6;
+    color: #666;
 }
-.main-table a:hover {
-    text-decoration: underline;
+
+.carousel-inner img {
+    height: 400px;
+    object-fit: cover;
 }
