--- a/Codigo/css/header1.css
+++ b/Codigo/css/header1.css
@@ -10,6 +10,7 @@ body {
 
 header {
     background: #f8f9fa;
+    z-index: 20;
 }
 
 .navbar {
@@ -65,6 +66,7 @@ header {
         transition: .3s ease;
         border-bottom-left-radius:4px ;
         border-bottom-right-radius:4px ;
+        z-index: 15;
 }
 
 
@@ -81,6 +83,7 @@ header {
     top: 0;
     cursor: pointer;
     transition: 0.3s ease;
+    z-index: 21;
 }
 
 .ham-menu span{
@@ -90,6 +93,7 @@ header {
     border-radius: 25px;
     position: absolute;
     transition: 0.3s ease;
+    z-index: 20;
 }
 
 .ham-menu span:nth-child(1) {
@@ -135,7 +139,7 @@ header {
 .uop {
     background: #FF577C;
     color: #ffff;
-    height: 22px;
+    height: 28px;
     border-radius: 4px;
     cursor: pointer;
     transition: 0.3s ease;
