--- a/Codigo/css/termos.css
+++ b/Codigo/css/termos.css
@@ -8,8 +8,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .content{
     align-items: center;
-    
 }
 p {
     text-align: center;
+}
+hr {
+    margin-top: 0px;
 }
